<resources>
    <string name="app_name">MAD_Team4_FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_where_to_next">Hi! Where to next?</string>
    <string name="explore"><b>Explore</b></string>
    <string name="community"><b>Community</b></string>
    <string name="Community"><b>Community</b></string>
    <string name="add_post"><b>Add Post</b></string>
    <string name="saved_trails"><b>Saved</b></string>
    <string name="profile"><b>Profile</b></string>
    <string name="write_review">Write a Review</string>
    <string name="trailines">TrailLines</string>
    <string name="discover_trail">Discover outdoor experiences with TrailLines</string>
    <string name="get_started">Get Started</string>
    <string name="thank_you_review">Thank you for writing a review for</string>
    <string name="your_rating">Your Rating</string>
    <string name="share_experience">Share your experience</string>
    <string name="share_in_detail">Share in detail</string>
    <string name="add_image">Add Images</string>
    <string name="add_symbol">+</string>
    <string name="would_you_recommend">Would you recommend?</string>
    <string name="submit">Submit</string>
    <string name="recommended">Recommended</string>
    <string name="not_recommended">Not recommended</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- LoginActivity resources -->
    <string name="hint_login_email">Enter Email</string>
    <string name="hint_login_password">Enter Password</string>
    <string name="login_empty_email">Invalid Email</string>
    <string name="login_empty_password">Invalid Password</string>
    <string name="login_button_text">Login</string>

    <!-- SignUpActivity resources -->
    <string name="hint_signup_name">Enter Name</string>
    <string name="hint_signup_email">Enter Email</string>
    <string name="hint_signup_password">Enter Password</string>
    <string name="hint_signup_confirm_password">Confirm Password</string>
    <string name="signup_empty_email">Invalid Email</string>
    <string name="signup_empty_password">Invalid Password</string>
    <string name="signup_button_text">Sign up</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_not_match">Passwords do not match!</string>
    <string name="sign_up_success">Sign Up Successful!</string>
    <string name="signup_fail">Sign Up Failed: %1$s</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="update_failed">Failed to update profile</string>
    <string name="permission_required">Permission Required!</string>
    <string name="traillines_messenger">TrailLines Messenger</string>
    <string name="password_change_successful">Password changed successfully!</string>
    <string name="something_wrong">Something went wrong!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat_appear">Chats will appear here</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="request_list">Friend Request List</string>
    <string name="find_friends">Friend Lists</string>
    <string name="change_picture">Change picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="remove_picture_successful">Profile picture removed successfully</string>
    <string name="press_again_exit">Press the back button again to exit</string>
    <string name="loading">Loading...</string>
    <string name="accept_request">Accept</string>
    <string name="deny">Deny</string>
    <string name="failed_friend_request">No Friend Request Found %1$s</string>
    <string name="deny_request">Request Deny Failed : %1$s</string>
    <string name="not_accepted">Failed to accept request</string>
    <string name="reset_instructions">Reset password instructions have been sent on email: %1$s</string>
    <string name="email_sent_failed">Failed to send to email: %1$s</string>
    <string name="resend_timer">Resend in: %1$s</string>
    <string name="retry">Retry</string>
    <string name="failed_chat_list">"Chat List Failed : %1$s "</string>
    <string name="request_sent_successfully">Request sent successfully</string>
    <string name="failed_to_send_request">Failed to send friend request: %1$s</string>
    <string name="request_cancelled_successfully">Request cancelled successfully</string>
    <string name="failed_to_cancel_request">Failed to cancel request: %1$s</string>
    <string name="failed_to_send_message">Failed to send message: %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="no_internet">No internet connection</string>
</resources>