<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_search" />
    <item
        android:id="@+id/community"
        android:icon="@drawable/ic_people"
        android:titleCondensed="Community"
        android:title="@string/community" />
    <item
        android:id="@+id/saved_trails"
        android:title="@string/saved_trails"
        android:titleCondensed="Saved"
        android:icon="@drawable/ic_bookmark_empty"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        android:titleCondensed="Profile" />
</menu>