<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReviewScreen">

    <TextView
        android:id="@+id/holder_write_a_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/write_review"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/holder_thank_you_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/thank_you_review"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_write_a_review" />

    <TextView
        android:id="@+id/view_park_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_thank_you_review"
        tools:text="Park Name:" />

    <RatingBar
        android:id="@+id/app_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:numStars="5"
        android:progressTint="#FFB300"
        android:rating="4.5"
        android:secondaryProgressTint="#FFB300"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_your_rating" />

    <TextView
        android:id="@+id/holder_your_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/your_rating"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_park_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/holder_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="Share Experience"
        android:textSize="16sp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:counterEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_ratingBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEEEE"
            android:fontFamily="@font/lato"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/holder_body"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Share in detail"
        android:textSize="16sp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:counterEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_input_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEEEE"
            android:fontFamily="@font/lato"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>